--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
+  freezed: ^2.0.3+1
+  freezed_annotation: ^2.0.3
   intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+
+  build_runner: ^2.1.11
 
 flutter:
   generate: true
