--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
+  flutter_svg: ^1.1.0
   freezed: ^2.0.3+1
   freezed_annotation: ^2.0.3
   intl: ^0.17.0
@@ -42,3 +43,6 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+
+  assets:
+    - assets/svg/logo.svg
