--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   # local
   auth_repo:
     path: packages/auth_repo
+  cart_repo:
+    path: packages/cart_repo
   category_repo:
     path: packages/category_repo
   order_repo:
