--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bytes7bytes7.wish_swish">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="wish_swish"
+        android:label="Wish Swish"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
