--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: wish_swish
 description: Test task.
 publish_to: 'none'
-version: 0.0.1-alpha
+version: 0.0.1
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
